selpic modal text overflow fixed

--- a/client/templates/selectedPicture/selPic.css
+++ b/client/templates/selectedPicture/selPic.css
@@ -14,13 +14,20 @@
 
 #myModal {
     color: black;
-    height: 500px;
+}
+
+.modal-dialog{
+    overflow-y: initial !important;
 }
 
 .modal-body{
-	overflow: auto;
-	word-wrap:break-word;
-	height: 100%;
+	background: white;
+	height: 320px;
+	overflow-y:auto;
+}
+
+.modal-footer{
+
 }
 
 @media (max-width: 800px){
